style: fix dark mode ui issues and avatar style

--- a/app/assets/stylesheets/_theme.scss
+++ b/app/assets/stylesheets/_theme.scss
@@ -8,6 +8,8 @@
   --bs-danger: #d82c5b;
   --bs-light: #f6f7f8;
   --bs-dark: #0e2238;
+  --bs-node: #E02962;
+  --bs-nav: #121212;
   --bs-font-sans-serif: "Open Sans",sans-serif;
   --bs-font-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
   --bs-body-font-family: var(--bs-font-sans-serif);
@@ -57,7 +59,7 @@
   --bs-gray-900-rgb: 144,146,148;
   --bs-border-color: #383838;
   --elevation-overlay-04-dp: 9;
-  --bs-surface-bg: #E02962;
+  --bs-surface-bg: #1e1e1e;
   --bs-active-surface-bg: #201b25;
 }
 
